# gof

./: .gitignore  Cargo.toml  README.md  TODO.md
config/: keys.toml
config/syntax-defs/: rust.toml  toml.toml
config/themes/: default.toml
src/: application.rs  lib.rs  main.rs
src/buffer/: buffer.rs  buffercontents.rs  mod.rs
src/config/: config.rs
src/editor/: editor.rs  input.rs  mod.rs
src/syntax/: syntax.rs
src/ui/: border.rs  mod.rs  rect.rs  ui.rs  window.rs
src/windows/: buffer.rs  empty.rs  linenumbers.rs  mod.rs  tabs.rs
