[package]
name = "rust-text-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "gof_lib"
path = "./src/lib.rs"

[[bin]]
name = "gof"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tui = "0.17"
# crossterm = "0.22"

termion = "1.5"
tui = { version = "0.17", default-features = false, features = [ "termion" ] }

ropey = "1.3"

log = "0.4"
simplelog = "0.11"

toml = "0.5"
regex = "1.5"
